test-service/testk8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: testpage
  name: testpage
spec:
  replicas: 1
  selector:
    matchLabels:
      run: testpage
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: testpage
    spec:
      containers:
      - name: testpage
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: testpage
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: testpage
