test-service/testk8-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: testpage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: k8test.rcc.uq.edu.au
    http:
      paths:
      - path: /
        backend:
          serviceName: testpage
          servicePort: 80
  tls:
  - hosts:
    - k8test.rcc.uq.edu.au
    secretName: testk8-tls
